Added discovery-server using netflix eureka

--- a/product-service/src/main/resources/application.properties
+++ b/product-service/src/main/resources/application.properties
@@ -1,5 +1,11 @@
 server.port=8082
+spring.application.name=product-service
 
 spring.data.mongodb.uri=mongodb+srv://root:password12345@mongo-cluster.ksnhhca.mongodb.net/?retryWrites=true&w=majority
 spring.data.mongodb.database=productDB
+
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
+
+
+
 
