Added Api gateway

--- a/discovery-server/src/main/resources/application.properties
+++ b/discovery-server/src/main/resources/application.properties
@@ -1,5 +1,27 @@
 server.port=8761
 
 eureka.instance.hostname=localhost
-eureka.client.register-with-eureka=false
+eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=false
+
+
+
+#Add this property only if we are changing the port number of eureka from 8761 to some random port(5555)
+#eureka.client.serviceUrl.defaultZone=http://localhost:5555/eureka
+
+
+
+# eureka.client.fetch-registry=false
+# By default fetch-registry=true will try to fetch registry from other discovery service running on port 8761(default),
+# But in our case we are the one who is running discovery service in port 8761. So, which means we are trying to fetch the
+#registry from the our own service, which is not even started yet at port 8761. Therefore we will get the exception.
+#But after every 30 seconds, now when our application is running it will again fetch the registry from service and this
+##time we won't be getting any errors coz now my service is running well on 8761
+
+
+# Mai hi client or mai hi server - Ram Rahim
+
+
+
+#eureka.client.register-with-eureka=false
+# If set true our discovery service will also get into registry as a client.
